--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,13 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+body{
+    display:flex;
+    justify-content:center;
+    background-color: pink;
+}
+
+.title{
+    
+}
